GGB-2220 avoid extra scrollbars, code for Classic
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@58288 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/css/web-styles.less
+++ b/web/src/main/resources/org/geogebra/web/resources/css/web-styles.less
@@ -2953,8 +2953,8 @@
 	.propertiesStyleBar {
 		width: 34px;
 		position: absolute;
-		right: 0px;
-		top: 30px;
+		right: 0;
+		top: 0;
 		max-width:100%;
 		overflow:hidden;
 	}
